// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusTag matches snapshot for failed status 1`] = `
<span
  className="tag is-danger"
>
  FAILED
</span>
`;

exports[`StatusTag matches snapshot for paused status 1`] = `
<span
  className="tag is-light"
>
  PAUSED
</span>
`;

exports[`StatusTag matches snapshot for running status 1`] = `
<span
  className="tag is-success"
>
  RUNNING
</span>
`;

exports[`StatusTag matches snapshot for unassigned status 1`] = `
<span
  className="tag is-warning"
>
  UNASSIGNED
</span>
`;
